# helix_optimization

./: .gitignore  .gitmodules  CLAUDE.md  README.md  config_epitope_viz.yaml  config_epitopes.yaml  config_examples.yaml  config_hotspot.yaml  config_linkers.yaml  config_ml.yaml  config_pipeline.yaml  config_pxdesign.yaml  config_scannet.yaml  config_tensors.yaml  examples_instructions.md  pyproject.toml  tensors.md
data/: module1.md  module2_instructions.md  stage1_instructions.md  stage1_tests.md
data/linkers/test/: build_test_inputs.py
tests/: conftest.py  test_architecture.py  test_backbone_continuity_loss.py  test_batch_calibration.py  test_candidates_pipeline.py  test_chi_angles.py  test_dunbrack_loss.py  test_examples_pipeline.py  test_examples_segmentation.py  test_examples_windowing.py  test_helix_dihedral_loss.py  test_interaction_bce_loss.py  test_interaction_losses.py  test_interactions.py  test_interactions_noise.py  test_interfaces_integration.py  test_length_bucket_sampler.py  test_obsolete_integration.py  test_random_rotation_augmentation.py  test_rcsb_integration.py  test_sidechain_placement.py  test_steric_clash_loss.py  test_tensors_canonicalize.py  test_tensors_constants.py  test_tensors_pipeline.py  test_val_split.py  test_verify_integration.py
tests/fixtures/rcsb_graphql/: bd18030be79b81e9.jsonl
tests/fixtures/rcsb_interfaces/: 1AON_1_10.json  1AON_1_11.json  1AON_1_12.json  1AON_1_13.json  1AON_1_15.json  1AON_1_18.json  1AON_1_19.json  1AON_1_20.json  (+11 more)
tests/integration/: test_interfaces_dedupe.py  test_phase_a_offline.py  test_verify_parse.py
tests/unit/: test_build_candidate_row.py  test_drop_reason.py  test_epitope_viz.py  test_epitopes_patches.py  test_hotspot_filter.py  test_obsolete.py  test_pipeline_manager.py  test_scannet_filter.py
tools/dunbrack/: fit_rotamer_library.py
tools/oom_probe/: bootstrap.sh  launch.py
tools/runpod_boltzgen/: build_specs.py  crop_best_helix.py  graft_helix.py  inspect_results.py  launch_boltzgen.py  redesign_flanking_loops.py  score_designs.py
tools/runpod_pxdesign/: _msa_client.py  _seq_extract.py  bootstrap.sh  build_msas.py  build_refold_inputs.py  launch.py  launch_refold.py  prewarm.py  pymol_views.py  rank_designs.py  rank_refold.py  run_protenix_refold.py  run_pxdesign.py  sequence_design.py
tools/runpod_smoke_test/: bootstrap.sh  config_smoke.yaml  launch.py  make_subset.py
tools/runpod_train/: bootstrap.sh  launch.py
twistr/: README.md  cli.py  config.py
twistr/agent/: README.md  __init__.py  claude_client.py  config.py  designer.py  driver.py  pareto.py  prompts.py  tools.py
twistr/curation/: README.md  candidates.py  download.py  manifest.py  obsolete.py  paths.py  rcsb.py  report.py  verify.py
twistr/epitope_selection/: README.md
twistr/examples/: README.md  __init__.py  assembly.py  constants.py  contacts.py  driver.py  finalize_manifest.py  modal_app.py  pipeline.py  report.py  sasa.py  segmentation.py  visualize.py  windowing.py
twistr/linkers/: README.md  pose_builder.py
twistr/ml/: config.py
twistr/pipeline/: README.md  _cache.py  cluster_helices.py  config.py  constants.py
twistr/tensors/: README.md  __init__.py  canonicalize.py  config.py  constants.py  driver.py  dssp.py  report.py
twistr/tools/: finalize_examples_manifest.py  visualize_example.py
(+210 files in other folders)
